--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,10 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
+        cache-dependency-path: go.sum
+
+    - name: Mod download
+      run: go mod download
 
     - name: Build
       run: make bin/authz-broker
