--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
 
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -22,8 +22,8 @@ jobs:
         go-version: '1.20'
         cache-dependency-path: go.sum
 
-    - name: Mod download
-      run: go mod download
+    - name: Version
+      run: go version
 
     - name: Build
       run: make bin/authz-broker
