--- a/authz/policy-default.yaml
+++ b/authz/policy-default.yaml
@@ -1,1 +1,8 @@
-{"name":"policy_1","users":["","user_1","user_2"],"actions":["container_create","version"]}
+- name: "policy_1"
+  users:
+    - ""
+    - "user_1"
+    - "user_2"
+  actions:
+    - "container_create"
+    - "version"
