--- a/authz/policy-anubis.yaml
+++ b/authz/policy-anubis.yaml
@@ -1,5 +1,11 @@
 - name: "policy_1"
   actions:
-    - name: "container_create"
-      body: {"HostConfig": {"CapAdd": null}}
-    - name: "version"
+    - name: ""
+    - name: version
+    - name: docker_ping
+    - name: container_attach
+    - name: container_resize
+    - name: container_create
+      body:
+        HostConfig:
+          CapAdd: null
