--- a/authz/policy-anubis.yaml
+++ b/authz/policy-anubis.yaml
@@ -16,6 +16,7 @@
     - name: network_create
     - name: network_delete
     - name: volume_inspect
+    - name: volume_create
     - name: container_create
       body:
         HostConfig:
