ADD docker info to anubis policy

--- a/authz/policy-anubis.yaml
+++ b/authz/policy-anubis.yaml
@@ -2,6 +2,7 @@
   actions:
     - name: version
     - name: docker_ping
+    - name: docker_info
     - name: container_attach
     - name: container_resize
     - name: container_wait
